chore: sync campus platform fixes and 3d prototype